# crypto_wallet

./: .gitignore  CMakeLists.txt  README.md
docs/: architechture_description.docx
src/client/: CMakeLists.txt
src/client/cash_storage/: cash_storage.cpp  cash_storage.h
src/client/daemonizer/: daemonizer.cpp  daemonizer.h
src/client/data_loader/: CMakeLists.txt  data_loader.cpp  data_loader.h
src/client/data_loader_service/: data_loader_service.cpp  data_loader_service.h
src/client/hash_storage/: hash_storage.cpp  hash_storage.h
src/client/sql_sequence_builder/: sql_sequence_builder.cpp  sql_sequence_builder.h
src/client/uri_parser/: uri_parser.cpp  uri_parser.h
tests/: CMakeLists.txt
tests/data_loader/: test_data_loader.cpp
tests/uri_parser/: test_uri_parser.cpp
